# kaggle

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: test.yml
src/titanic/: main.py
src/titanic/nbs/: explore.ipynb  notebook020bff013d.ipynb
tests/: test_main.py
