[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = ["alex-treebeard <alex@treebeard.io>"]
packages = [
  {include = "titanic", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
nbmake = "^0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
